# telecomai

./: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: google-cloudrun.yml
app/: __init__.py  agent.py  main.py  tools.py
