[project]
name = "mission9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.20.0",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
